Configura propriedades do kafka consumer e producer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+##CONFIG CONTEXT
+server.servlet.context-path=/products-api
+
+##KAFKA
+kafka-server=10.0.0.112:29092
+app.kafka-topic=products
+app.kafka-group=product-api
+
+##CONFIG PRODUCER
+spring.kafka.producer.bootstrap-servers=${kafka-server}
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+##CONFIG CONSUMER
+spring.kafka.consumer.bootstrap-servers=${kafka-server}
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.gitmayconn.kafkaconsumerandproducerwithjava.models
+
+
 
